[package]
name = "os"
version = "0.1.0"
authors = ["buhenxihuan <1127751018@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = {version = "0.0.2", features = ["legacy"]}
log = "0.4"

[profile.release]
debug = true
